add files update

--- a/02 - HTML/Pasteleria/pastelero.html
+++ b/02 - HTML/Pasteleria/pastelero.html
@@ -21,7 +21,7 @@
                 <li><a href="pastelero.html">Pastelero</a></li>
             </ul>
         </nav>
-        <section class="contenedor">
+        <section class="cajaCentral">
 
        
         <table border="1" class="default">
