--- a/02 - HTML/Pasteleria/pedidos.html
+++ b/02 - HTML/Pasteleria/pedidos.html
@@ -25,7 +25,7 @@
     
     <br>
 
-    <section class="contenedor">
+    <section class="cajaCentral">
         
         <div >
             <h1 class="pedidotitle">Hacer pedido</h1>
